compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_value_as_submodule3.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: import one/wibble
---
error: Unknown module
  ┌─ /src/one/two.gleam:1:1
  │
1 │ import one/wibble
  │ ^^^^^^^^^^^^^^^^^ Did you mean `one/wobble`?

No module has been found with the name `one/wibble`.
Hint: Did you mean `import one.{wibble}`?

See: https://tour.gleam.run/basics/unqualified-imports
